Fix interaction inputs wrapping

--- a/app/assets/javascripts/angular/components/reportMovementIndicators/confirmMovementIndicators/confirmMovementIndicators.scss
+++ b/app/assets/javascripts/angular/components/reportMovementIndicators/confirmMovementIndicators/confirmMovementIndicators.scss
@@ -2,12 +2,12 @@
 
 report-movement-indicators-confirm {
     @media #{$breakpoint-not-small} {
-        .column-count-2-ns {
-            column-count: 2;
+        .column-grid-ns {
+            display: grid;
+            grid-template-rows: repeat(4, 1fr);
+            grid-auto-columns: 1fr;
+            grid-auto-flow: column;
             column-gap: 3rem;
-        }
-        .column-count-allow-overflow-ns {
-            will-change: transform; // Without this in the children of the container with the column-count property, tooltips become clipped and wrap to the previous column
         }
     }
 }
